<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameBoard"
    android:background="@color/white"
    android:backgroundTint="@color/white">

<!--    Player 2 buttons-->
    <LinearLayout
        android:id="@+id/linearLayoutPlayer2Buttons"
        android:layout_width="407dp"
        android:layout_height="150dp"
        android:gravity="center"
        tools:layout_editor_absoluteX="3dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_player2_lower"
            app:icon="@drawable/baseline_arrow_drop_down_24"
            android:text="@string/lower_button"
            android:rotation="180"
            android:layout_width="203dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="46dp"
            app:iconGravity="top"
            app:iconPadding="-26dp"
            app:iconSize="90dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_player2_higher"
            app:icon="@drawable/baseline_arrow_drop_up_24"
            android:text="@string/higher_button"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:rotation="180"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="46dp"
            app:iconGravity="top"
            app:iconPadding="-26dp"
            app:iconSize="90dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"/>

<!--        Player 2 if AI buttons-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_player2AI_lower"
            app:icon="@drawable/baseline_arrow_drop_down_24"
            android:text="@string/lower_button"
            android:rotation="180"
            android:layout_width="203dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="46dp"
            app:iconGravity="top"
            app:iconPadding="-26dp"
            app:iconSize="90dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_player2AI_higher"
            app:icon="@drawable/baseline_arrow_drop_up_24"
            android:text="@string/higher_button"
            android:rotation="180"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="46dp"
            app:iconGravity="top"
            app:iconPadding="-26dp"
            app:iconSize="90dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>


    </LinearLayout>
<!--Player 1 score counter textview-->
    <TextView
        android:id="@+id/player1_score"
        android:text="@string/p1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutPlayer1Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_backImage" />

<!--    Imageview with card that plays-->
    <ImageView
        android:id="@+id/iv_backImage"
        app:srcCompat="@drawable/backsidecard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="25dp"
        app:layout_constraintBottom_toTopOf="@id/player1_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player2_score"
        app:layout_constraintVertical_bias="0.501" />

<!--Player 2 score counter-->
    <TextView
        android:id="@+id/player2_score"
        android:text="@string/p2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_backImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPlayer2Buttons" />

<!--    Round counter textview-->
    <TextView
        android:id="@+id/count_rounds"
        android:text="@string/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="328dp"
        android:rotation="270"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/iv_backImage"
        app:layout_constraintVertical_bias="0.525" />

<!--    Player 1 buttons-->
    <LinearLayout
        android:id="@+id/linearLayoutPlayer1Buttons"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_backImage"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_player1_higher"
            app:icon="@drawable/baseline_arrow_drop_up_24"
            android:text="@string/higher_button"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="46dp"
            app:iconGravity="top"
            app:iconPadding="-26dp"
            app:iconSize="90dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_player1_lower"
            app:icon="@drawable/baseline_arrow_drop_down_24"
            android:text="@string/lower_button"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="46dp"
            app:iconGravity="top"
            app:iconPadding="-26dp"
            app:iconSize="90dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>